[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "paypal-sdk"
description = "test"
version = "1.4.9"
readme = "README.md"
requires-python = ">=3.7"
keywords = []
authors = [{name = "qa", email = "taha.ali@apimatic.io"}]
urls = {Documentation = "https://app.dev.apimatic.io/api-docs-preview/dashboard/682daea1265b9bd834e5027a/v/2_16#/http/step-by-step-tutorial"}
dependencies = ["apimatic-core~=0.2.0, >= 0.2.17", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
